--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </a>
 
     <a href="./public/birthday-invite.html">
-        <img src="./assets/images/Birthday.png" alt="" height="200">
+        <img src="./assets/images/Movie Project.png" alt="" height="200">
     </a>
 </body>
 </html>
